# AI_Smart_Home

./: .gitignore  DESIGN.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
config/: houses.example.yaml  portfolio.example.yaml
deploy/: deployment.example.yaml  homeops.service  install.sh  secrets.example.env
docs/: PRODUCTIZATION.md  STRATEGY.md
homeops/: __init__.py  audit.py  automations.py  baseline.py  bootstrap.py  certificate.py  cli.py  conformance.py  dashboard.py  delegations.py  deployment.py  director.py  energy.py  events.py  health.py  identity.py  inference.py  model.py  modes.py  permissions.py  portfolio.py  predictive.py  preflight.py  prognostics.py  router.py  routines.py  safety_case.py  secrets.py  sensor_integrity.py  service.py  soc.py  state.py  twin.py
scripts/: demo.py  run_scenario.py
studies/: README.md  phm_home.py
tests/: conftest.py  test_ai_capability_expansion.py  test_ai_ops_layer.py  test_any_model.py  test_audit.py  test_automations.py  test_autonomy_tier.py  test_baseline.py  test_capability_floor.py  test_chat_session.py  test_cli.py  test_dashboard.py  test_delegations.py  test_deployment_validation.py  test_director.py  test_energy.py  test_exporters.py  test_failsafe.py  test_gateway.py  test_hardening.py  test_health.py  test_identity.py  test_local_first.py  test_moat_artifacts.py  test_model.py  test_next_level_additions.py  test_nuisance_and_attestation.py  test_permissions.py  test_persistence.py  test_portfolio.py  test_preflight.py  test_prod_hardening.py  test_prognostics.py  test_providers.py  (+9 more)
(+26 files in other folders)
