[project]
name = "homeops"
version = "0.1.0"
description = "Two-house AI ops layer — runnable mocked reference implementation"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[tool.pytest.ini_options]
markers = [
    "live: hits the real Claude API (needs ANTHROPIC_API_KEY); skipped by default",
]
addopts = "-q"
testpaths = ["tests"]
